--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <section id="profile">
     <h2>ข้อมูลส่วนตัว</h2>
     <ul>
-      <li>อีเมล: atthakorn@email.com</li>
-      <li>เบอร์โทร: 099-999-9999</li>
+      <li>อีเมล:xcarascitr@gmail.com</li>
+      <li>เบอร์โทร: 097-293-1813</li>
       <li>ที่อยู่: กรุงเทพมหานคร</li>
     </ul>
   </section>
